Fixed clipped features images in Features page header

--- a/LESS/featStyle.less
+++ b/LESS/featStyle.less
@@ -36,6 +36,14 @@ html, body {
   box-shadow: 2px 2px 2px lightgrey;
   justify-content: space-evenly;
   align-items: center;
+
+  .features1 {
+    margin-top: 10px;
+  }
+
+  .features2 {
+    margin-top: 10px;
+  }
 }
 
 h2 {
